fix overflow issue

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -1,3 +1,7 @@
+.landing-name{
+  white-space:nowrap;
+  font-size:clamp(2rem, 5vw, 4rem);
+}
 .landing-section {
   width: 100%;
   max-width: var(--cMaxWidth);
