--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -18,3 +18,6 @@
   transform: translateY(-100%);
   color: var(--accentColor);
 }
+body{
+  overflow-x:hidden;
+}
